rust/transpiler/tests/errors/unclosed_def.expected.err

 file: unclosed_def.hyper:3:1
error: This 'def' block is never closed.
 3 | def greet(name: str):
   | ^^^^^^^^^^^^^^^^^^^^^ opened here

 help: Close with 'end'

